# trunktail

./: .cursorignore  .gitignore  .latest-release  .oxlintrc.json  .prettierignore  .prettierrc  README.md  index.html  latest-release.json  package.json  tailwind.config.mjs  tsconfig.json  vite.config.ts
apps/docs/: README.md  astro.config.mjs  package.json
apps/trunktail/: index.html  package.json  tsconfig.json  vite.config.ts
apps/trunktail/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/trunktail/src-tauri/bridge/: Cargo.toml
apps/trunktail/src-tauri/bridge/src/: ffi_utils.rs
apps/trunktail/src-tauri/icons/: icon.icns
apps/trunktail/src-tauri/src/: main.rs
docs/: 404.html  index.html  sitemap-0.xml  sitemap-index.xml
docs/_astro/: Search.astro_astro_type_script_index_0_lang.xwj-ry2K.js  index.BJT2DUuG.css  ui-core.BBQcS7EI.js
docs/commands/: index.html
docs/pagefind/: pagefind-entry.json  pagefind.en_c4817c28ab.pf_meta
docs/trunktail/: index.html
src/: main.tsx  routeTree.gen.ts  styles.css  utils.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/bridge/: Cargo.toml  build.rs
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: about.tsx  container-detail.tsx  container-item.tsx  container-status-indicator.tsx  image-detail.tsx  image-item.tsx  logo.tsx  logs.tsx  metadata-preview.tsx  nav.tsx  no-selected.tsx  portal.tsx  providers.tsx  pull-image.tsx  start-screen.tsx  system-context.tsx  system-info.tsx
src/lib/: commands.ts
swift-lib/: Package.resolved  Package.swift
(+104 files in other folders)
