[package]
name = "Trunktail"
version = "0.1.0"
description = "A container management GUI for macOS"
authors = ["elliothu.my@gmai.com"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "devtools"] }
tauri-plugin-opener = "2"
container_bridge = { path = "./bridge" }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-devtools = "2.0.0"
window-vibrancy = "0.6.0"
